@@ -42,10 +42,12 @@ function boot(callback) {
   });
 }
 
-test("A helper is registered for templates under the components/ directory", function() {
-  boot();
-  ok(Ember.Handlebars.helpers['expand-it'], "The helper is registered");
-});
+if (!Ember.FEATURES.isEnabled('container-renderables')) {
+  test("A helper is registered for templates under the components/ directory", function() {
+    boot();
+    ok(Ember.Handlebars.helpers['expand-it'], "The helper is registered");
+  });
+}
 
 test("The helper becomes the body of the component", function() {
   boot();
@@ -61,3 +63,59 @@ test("If a component is registered, it is used", function() {
 
   equal(Ember.$('div.testing123', '#qunit-fixture').text(), "hello world", "The component is composed correctly");
 });
+
+if (Ember.FEATURES.isEnabled('container-renderables')) {
+
+  test("Late-registered components can be rendered with custom `template` property", function() {
+
+    Ember.TEMPLATES.application = compile("<div id='wrapper'>there goes {{my-hero}}</div>");
+
+    boot(function() {
+      container.register('component:my-hero', Ember.Component.extend({
+        classNames: 'testing123',
+        template: function() { return "watch him as he GOES"; }
+      }));
+    });
+
+    equal(Ember.$('#wrapper').text(), "there goes watch him as he GOES", "The component is composed correctly");
+    ok(!Ember.Handlebars.helpers['my-hero'], "Component wasn't saved to global Handlebars.helpers hash");
+  });
+
+  test("Late-registered components can be rendered with template registered on the container", function() {
+
+    Ember.TEMPLATES.application = compile("<div id='wrapper'>hello world {{sally-rutherford}} {{#sally-rutherford}}!!!{{/sally-rutherford}}</div>");
+
+    boot(function() {
+      container.register('template:components/sally-rutherford', compile("funkytowny{{yield}}"));
+      container.register('component:sally-rutherford', Ember.Component);
+    });
+
+    equal(Ember.$('#wrapper').text(), "hello world funkytowny funkytowny!!!", "The component is composed correctly");
+    ok(!Ember.Handlebars.helpers['sally-rutherford'], "Component wasn't saved to global Handlebars.helpers hash");
+  });
+
+  test("Late-registered components can be rendered with ONLY the template registered on the container", function() {
+
+    Ember.TEMPLATES.application = compile("<div id='wrapper'>hello world {{borf-snorlax}} {{#borf-snorlax}}!!!{{/borf-snorlax}}</div>");
+
+    boot(function() {
+      container.register('template:components/borf-snorlax', compile("goodfreakingTIMES{{yield}}"));
+    });
+
+    equal(Ember.$('#wrapper').text(), "hello world goodfreakingTIMES goodfreakingTIMES!!!", "The component is composed correctly");
+    ok(!Ember.Handlebars.helpers['borf-snorlax'], "Component wasn't saved to global Handlebars.helpers hash");
+  });
+
+  test("Component-like invocations are treated as bound paths if neither template nor component are registered on the container", function() {
+
+    Ember.TEMPLATES.application = compile("<div id='wrapper'>{{user-name}} hello {{api-key}} world</div>");
+
+    boot(function() {
+      container.register('controller:application', Ember.Controller.extend({
+        'user-name': 'machty'
+      }));
+    });
+
+    equal(Ember.$('#wrapper').text(), "machty hello  world", "The component is composed correctly");
+  });
+}
